# AdvanceGame-Devlopment

./: CMakeLists.txt  README.md
assets/shaders/: VolumetricLight.frag  basic.frag  basic.vert  pbr.frag  pbr.vert  shadow.frag  shadow.vert  skinning.vert
include/game/: Camera.h  Game.h  LightningSystem.h  MeshUtils.h  Node.h  PBRMaterial.h  ParticleSystem.h  PhysicsWorld.h  PostProcess.h  Shader.h  ShadowMap.h  SkeletalAnimation.h  SoundSystem.h  Texture.h  UIRenderer.h  glm_minimal.h  pch.h
src/: Camera.cpp  Game.cpp  LightningSystem.cpp  MeshUtils.cpp  PBRMaterial.cpp  ParticleSystem.cpp  UIRenderer.cpp  main.cpp  pch.cpp
